updated gateway tab

--- a/public/pages/apis.html
+++ b/public/pages/apis.html
@@ -6,6 +6,7 @@
   <div class='col-sm-12 box'>
     <div class="text-center">
 
+    	<h4>example icons</h4>
     	<i class="fa fa-foursquare fa-5x "></i>
     	<i class="fa fa-flickr fa-5x "></i>
     	<i class="fa fa-github-square fa-5x "></i>
@@ -22,6 +23,7 @@
     	<i class="fa fa-bitbucket fa-5x "></i>
     	<i class="fa fa-google-plus-square fa-5x "></i>
 
+    	<h4>available apis</h4>
 
 		  <ul class="channellist">
 
