--- a/public/pages/gateways.html
+++ b/public/pages/gateways.html
@@ -10,21 +10,21 @@
         Gateways
       </div>
       <div class='pull-right'>
-<!--         <button ng-click="addDevice = true" class="btn btn-primary" ng-hide="addDevice">
+<!--         <button ng-click="editGateway = true" class="btn btn-primary" ng-hide="editGateway">
           <i class="icon-chevron-down"></i> Add Device
         </button>
  -->        
-        <button ng-click="addDevice = false" class="btn btn-primary" ng-show="addDevice">
+        <button ng-click="editGatewaySection = false" class="btn btn-primary" ng-show="editGatewaySection">
           <i class="icon-chevron-up"></i> Cancel
         </button>
 
       </div>      
     </div>
 
-    <div class="col-sm-12" ng-show="addDevice">
-      <h3>Add/Edit Device</h3>   
+    <div class="col-sm-12" ng-show="editGatewaySection">
+      <h3>Edit Gateway</h3>   
       <form name="myForm">          
-        <input class="form-control" name="deviceName" ng-model="deviceName" placeholder="Device Name (required)" ng-value="deviceName" required>
+        <input class="form-control" name="gatewayName" ng-model="gatewayName" placeholder="Gateway Name (required)" ng-value="gatewayName" required>
         <!-- <span ng-show="duplicateDevice" style="color:red;">Device name already exists.</span> -->
         <br />
 
@@ -41,7 +41,7 @@
         </div>
 
         <br />
-        <button class="btn" ng-click="createDevice()">Submit</button>  
+        <button class="btn" ng-click="createGateway()">Submit</button>  
         <br /><br />            
       </form>
     </div>
@@ -65,8 +65,8 @@
           <td>{{gateway.online}}</td>
           <td>
             <a class="btn" href="/gateway?uuid={{gateway.uuid}}">Goto</a>
-            <button class="btn btn-inverse" ng-click="editDevice($index)">Edit</button>
-            <button class="btn btn-danger" ng-click="deleteDevice($index)">Delete</button>
+            <button class="btn btn-inverse" ng-click="editGateway($index)">Edit</button>
+            <button class="btn btn-danger" ng-click="deleteGateway($index)">Delete</button>
           </td>
 
 
