--- a/public/pages/api_detail.html
+++ b/public/pages/api_detail.html
@@ -55,6 +55,30 @@
         <button class="btn btn-large btn-primary" ng-click="authorize(channel)">Authenticate</button>
       </div>
 
+      <div class="pull-right" ng-show="isSimpleAuth()">
+
+        <div class="clearfix">
+            <label>Key</label>
+            <div class="input">
+                <input type="text" class="span3" placeholder="key" ng-model="key" />
+            </div>
+        </div>
+
+        <div class="clearfix">
+            <label>Token</label>
+            <div class="input">
+                <input type="text" class="span3" placeholder="token" ng-model="token" />
+            </div>
+        </div>
+
+        <br/>
+        <div class="clearfix">
+          <button class="btn btn-default" ng-click="save()">Save</button>
+        </div>
+        
+      </div>
+
+
     </div>
     </div>
     <div class="row col-xs-12">
@@ -78,19 +102,3 @@
     </div>
 
 </section>
-
-
-<!--   <div ng-show="isSimpleAuth()">
-  	<fieldset>
-  		<label for="key">Key:</label>
-  		<input id="key" name="key" type="text" />
-  		<br/>
-
-  		<label for="token">Token:</label>
-  		<input id="token" name="token" type="text" />
-  		<br/>
-
-  		<button class="btn btn-default" ng-click="save()">Save</button>
-  	</fieldset>
-  </div>
- -->
