--- a/public/pages/api_detail.html
+++ b/public/pages/api_detail.html
@@ -64,7 +64,7 @@
             </div>
         </div>
 
-        <div class="clearfix">
+        <div class="clearfix" ng-hide="hideSecretField">
             <label>Token</label>
             <div class="input">
                 <input type="text" class="span3" placeholder="token" ng-model="token" />
