fixed page reloading on apis and sidebar expander

--- a/public/index.html
+++ b/public/index.html
@@ -64,7 +64,7 @@
       <a class='navbar-brand' href='/'>
 			OCTOBLU
 			</a>
-      <a class='toggle-nav btn pull-left' href='#' style="display:none">
+      <a class='toggle-nav btn pull-left' href='' style="display:none">
         <i class='icon-reorder'></i>
       </a>
 
