--- a/public/pages/apis.html
+++ b/public/pages/apis.html
@@ -9,11 +9,9 @@
 	  <ul class="channellist">
 
 	  	<li ng-repeat="channel in channelList">
-		    <a href="">
-		        <div class="channel_icon-grid-view mod-index-0 pop-over fa {{getFAName(channel)}} fa-5x"
-		            ng-class="{'activechannel': isActive(channel)}"
-				  	data-original-title="{{channel.name}} - {{channel.description}}" data-placement="auto" ng-click="openDetails(channel)"></div>
-		  	</a>
+	        <div class="channel_icon-grid-view mod-index-0 pop-over fa {{getFAName(channel)}} fa-5x"
+	            ng-class="{'activechannel': isActive(channel)}"
+			  	data-original-title="{{channel.name}} - {{channel.description}}" data-placement="auto" ng-click="openDetails(channel)" style="cursor:pointer;"></div>
 		</li>
 
 	  </ul>
