--- a/public/pages/api_detail.html
+++ b/public/pages/api_detail.html
@@ -51,7 +51,11 @@
         <img src="{{logo_url()}}" height="100px" /> &nbsp; <h2>{{channel.name}}</h2>
       </div>
 
-      <div class="pull-right" ng-hide="!isOAuth()">
+      <div class="pull-right" ng-show="isActivated()">
+        <button class="btn btn-large btn-success" >Active</button>
+      </div>
+
+      <div class="pull-right" ng-show="isOAuth()">
         <button class="btn btn-large btn-primary" ng-click="authorize(channel)">Authenticate</button>
       </div>
 
@@ -60,14 +64,14 @@
         <div class="clearfix">
             <label>Key</label>
             <div class="input">
-                <input type="text" class="span3" placeholder="key" ng-model="key" />
+                <input type="text" class="span3" placeholder="key" ng-model="user_channel.key" />
             </div>
         </div>
 
         <div class="clearfix" ng-hide="hideSecretField()">
             <label>Token</label>
             <div class="input">
-                <input type="text" class="span3" placeholder="token" ng-model="token" />
+                <input type="text" class="span3" placeholder="token" ng-model="user_channel.token" />
             </div>
         </div>
 
@@ -80,10 +84,10 @@
 
       <div class="pull-right" ng-show="isCustomAuth()">
 
-      <div class="clearfix" ng-repeat="custom in channel.custom_tokens | orderBy:'name'">
-          <label>{{custom['name']}}</label>
+        <div class="clearfix" ng-repeat="custom in custom_tokens | orderBy:'name'">
+          <label>{{custom.name}}</label>
             <div class="input">
-                <input type="text" class="span3" placeholder="{{custom['name']}}" ng-model="key" />
+                <input type="text" class="span3" placeholder="{{custom.name}}" ng-model="custom.value" />
             </div>
         </div>
 
