3 separate sections for api list.. in progress

--- a/public/index.html
+++ b/public/index.html
@@ -207,6 +207,8 @@
   <script src="/assets/javascripts/jquery/jquery.cookie.js"></script>
   <script src="/assets/javascripts/jquery/jquery.mobile.custom.min.js" type="text/javascript"></script>
 
+  <script src="/assets/javascripts/sly.min.js" type="text/javascript"></script>
+
   <script src="/assets/javascripts/plugins/modernizr/modernizr.min.js" type="text/javascript"></script>
   <script src="/assets/javascripts/plugins/retina/retina.js" type="text/javascript"></script>
   <script src="/assets/javascripts/theme.js" type="text/javascript"></script>
