--- a/public/pages/apis.html
+++ b/public/pages/apis.html
@@ -2,20 +2,66 @@
   <div class="pull-left"><strong>Your UUID is:</strong> {{skynetuuid}}</div>
 </div><br /><br />
 
-<div class='row'>
-  <div class='col-sm-12 box'>
-    <div class="text-center">
+ <style>
+    .divScroll {
+        overflow:scroll;
+        height: auto;
+        width: 100%;
+    }
+    .scrollWrapper {
+        overflow: visible;
+        height: auto;
+        width: 3000px;
+    }
+    .divScroll ul {
+    	list-style-type: none;
+    }
+    .divScroll ul li {
+    	display:-moz-inline-stack;
+		display:inline-block;
+		zoom: 1;
+		*display: inline;
+		padding: 10px;
+		height: 500px;
+    	width: 300px;
+    	vertical-align: top;
+    }
+</style>
 
-	  <ul class="channellist">
 
-	  	<li ng-repeat="channel in channelList | orderBy:'name'">
-		        <div class="channel_icon-grid-view mod-index-0 pop-over fa {{getFAName(channel)}} fa-5x"
-		            ng-class="{'activechannel': isActive(channel)}"
-				  	data-original-title="{{channel.name}} - {{channel.description}}" data-placement="auto" ng-click="openDetails(channel)" style="cursor:pointer;"></div>
-		</li>
+ <div class="divScroll">
+ 	<div class="scrollWrapper">
 
-	  </ul>
+ 		<ul>
+ 			<li>
+ 				<h3>Active</h3>
+	  
+			  	<span ng-repeat="channel in channelList | filter:isActive | orderBy:'name'">
+				        <div class="channel_icon-grid-view mod-index-0 pop-over fa {{getFAName(channel)}} fa-5x"
+				            ng-class="{'activechannel': isActive(channel)}"
+						  	data-original-title="{{channel.name}} - {{channel.description}}" data-placement="auto" ng-click="openDetails(channel)" style="cursor:pointer;"></div>
+				</span>	
+ 			</li>
 
-		</div>
-	</div>
+ 			<li>
+ 				<h3>Available</h3>
+	  
+			  	<span ng-repeat="channel in channelList | filter:isInactive | orderBy:'name'">
+				        <div class="channel_icon-grid-view mod-index-0 pop-over fa {{getFAName(channel)}} fa-5x"
+				            ng-class="{'activechannel': isActive(channel)}"
+						  	data-original-title="{{channel.name}} - {{channel.description}}" data-placement="auto" ng-click="openDetails(channel)" style="cursor:pointer;"></div>
+				</span>	
+ 			</li>
+ 			
+ 			<li>
+ 				<h3>Custom</h3>
+	  
+			  	<span ng-repeat="channel in channelList | orderBy:'name'">
+				        <div class="channel_icon-grid-view mod-index-0 pop-over fa {{getFAName(channel)}} fa-5x"
+				            ng-class="{'activechannel': isActive(channel)}"
+						  	data-original-title="{{channel.name}} - {{channel.description}}" data-placement="auto" ng-click="openDetails(channel)" style="cursor:pointer;"></div>
+				</span>	
+ 			</li>
+ 		</ul>
+ 	</div>
 </div>
