added user_settings to api

--- a/public/pages/community.html
+++ b/public/pages/community.html
@@ -1,7 +1,7 @@
 <section id='content'>
   <div class='container'>
     <br /><br />    
-    <iframe  width="100%" height="1000" src="http://bfa4d4e0-694e-459b-9702-e2a6232d7f89.sitebuilder.vbulletin.com/" id="communityFrame"></iframe>
+    <iframe  width="100%" height="1000" src="http://octoblu.vbulletin.net/" id="communityFrame"></iframe>
   </div>
 </section>
 <script>
