--- a/public/pages/home.html
+++ b/public/pages/home.html
@@ -58,7 +58,7 @@
       </div>
       <div class="slide-panel" data-in="bottom" data-out="bottom">
         <div id="spt-6" class="sptext">
-          Machine-to-Machine Instant Messaging Powered by SkyNet.im    
+          Machine-to-Machine Instant Messaging network    
         </div>
       </div>
       <div class="slide-panel" data-in="left" data-out="left"> 
