--- a/public/pages/people.html
+++ b/public/pages/people.html
@@ -6,11 +6,11 @@
   <div class='col-sm-12 box'>
     <div class='box-header'>
       <div class='title pull-left'>
-        <i class='icon-cogs'></i>
-        Dev Tools
+        <i class='icon-group'></i>
+        People
       </div>
     </div>
   </div>
 </div>
 
-<p class="text-center"><img src="assets/images/robots/robot1.png" width="200"></p>
+<p class="text-center"><img src="assets/images/robots/robot2.png" width="200"></p>
