added icons to api page

--- a/public/pages/apis.html
+++ b/public/pages/apis.html
@@ -49,7 +49,7 @@
  	<div class="scrollWrapper">
 
  		<div>
-			<h3>Active</h3>
+			<h3><i class='icon-ok'></i> Active</h3>
 	  
 		  	<ul class="channellist">
  
@@ -62,7 +62,7 @@
 		</div>
 
 		<div>
-			<h3>Available</h3>
+			<h3><i class='icon-off'></i> Available</h3>
 	  
 		  	<ul class="channellist">
  
@@ -75,7 +75,7 @@
 		</div>
 		
 		<div>
-			<h3>Custom</h3>
+			<h3><i class='icon-edit'></i> Custom</h3>
 	  
 		  	<ul class="channellist">
  
