--- a/public/pages/gateways.html
+++ b/public/pages/gateways.html
@@ -65,7 +65,7 @@
           <td>{{gateway.online}}</td>
           <td>
             <a class="btn" href="/gateway?uuid={{gateway.uuid}}">Goto</a>
-            <button class="btn btn-inverse" ng-click="editGateway($index)">Edit</button>
+            <button class="btn btn-inverse" ng-click="editGateway($index)">Claim/Edit</button>
             <button class="btn btn-danger" ng-click="deleteGateway($index)">Delete</button>
           </td>
 
