--- a/public/pages/gateways.html
+++ b/public/pages/gateways.html
@@ -47,7 +47,70 @@
     </div>
 
     <div ng-hide="gateways.length">No gateways found</div>
-    <div class="table-responsive">
+    <div class="panel panel-primary" ng-repeat="gateway in gateways">
+      <div class="panel-heading">
+        <h3 class="panel-title">
+          <div>
+          {{gateway.name}} - {{gateway.uuid}}
+          <button class="btn btn-inverse" ng-click="editGateway($index)"><i class="icon-edit"></i></button>
+          <button class="btn btn-danger" ng-click="deleteGateway($index)"><i class="icon-trash"></i></button>
+
+          <span class="pull-right">{{gateway.online}}</span>
+          </div>
+        </h3>
+      </div>
+      <div class="panel-body">
+        <p>
+          <a class="btn" href="/gateway?uuid={{gateway.uuid}}">Goto</a>
+<!--           <button class="btn btn-inverse" ng-click="editGateway($index)">Claim/Edit</button>
+          <button class="btn btn-danger" ng-click="deleteGateway($index)">Delete</button>
+ -->
+          <button class="btn btn-primary" ng-click="getGatewayPlugins($index)">Plugins</button>
+          <button class="btn btn-primary" ng-click="getGatewaySubdevices($index)">Subdevices</button>
+        </p>
+
+        <div class="table-responsive">
+          <table class="table table-striped table-hover">
+            <tr>
+              <th>Name</th>
+              <th>Version</th>
+            </tr>
+
+            <tr ng-repeat="plugin in gateway.plugins">
+              
+              <td>
+                {{plugin.name}}
+              </td>
+              <td>{{plugin.version}}</td>
+
+            </tr>
+          </table>
+        </div>
+
+        <div class="table-responsive">
+          <table class="table table-striped table-hover">
+            <tr>
+              <th>Name</th>
+              <th>Type</th>
+            </tr>
+
+            <tr ng-repeat="subdevice in gateway.subdevices">
+              
+              <td>
+                {{subdevice.name}}
+              </td>
+              <td>{{subdevice.type}}</td>
+
+            </tr>
+          </table>
+        </div>
+
+
+
+      </div>
+    </div>
+
+<!--     <div class="table-responsive">
       <table class="table table-striped table-hover">
         <tr>
           <th>Name</th>
@@ -67,11 +130,14 @@
             <a class="btn" href="/gateway?uuid={{gateway.uuid}}">Goto</a>
             <button class="btn btn-inverse" ng-click="editGateway($index)">Claim/Edit</button>
             <button class="btn btn-danger" ng-click="deleteGateway($index)">Delete</button>
+            <button class="btn btn-primary" ng-click="getGatewayPlugins($index)">Plugins</button>
+            <button class="btn btn-primary" ng-click="getGatewaySubdevices($index)">Subdevices</button>
           </td>
 
 
         </tr>
       </table>
     </div>
+ -->  
   </div>
 </div>
