--- a/public/index.html
+++ b/public/index.html
@@ -233,7 +233,23 @@
   <script src="/assets/javascripts/demeterScroll.js"></script>
 
   <script type="text/javascript" src="/assets/javascripts/canvasjs.min.js"></script>
+<!--
+  <script>
+    var socket;
+    if($.cookie('skynetuuid') && $.cookie('skynettoken')){
+      // connect to skynet
+      var skynetConfig = {
+        "uuid": $.cookie('skynetuuid'),
+        "token": $.cookie('skynettoken')
+      }    
+      skynet(skynetConfig, function (e, skysocket) {
+        if (e) throw e;
+        socket = skysocket;
+      });
 
+    }
+  </script>
+-->
   <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
     (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
