--- a/public/pages/gateways.html
+++ b/public/pages/gateways.html
@@ -20,29 +20,24 @@
 
       </div>      
     </div>
+
     <div class="col-sm-12" ng-show="editGatewaySection">
       <h3>Edit Gateway</h3>   
-      <form name="myForm">          
-        <input class="form-control" name="gatewayName" ng-model="gatewayName" placeholder="Gateway Name (required)" ng-value="gatewayName" required id="gatewayName">
-        <!-- <span ng-show="duplicateDevice" style="color:red;">Device name already exists.</span> -->
-        <br />
-
-        <div ng-repeat="key in keys" class="form-inline">
-          <div class="form-group">
-            <input class="form-control" ng-model="key.key" placeholder="Key">
-          </div>
-          <div class="form-group">
-            <input class="form-control" ng-model="key.value" placeholder="Value">
-          </div>
-          <a href ng-click="removeKeyVals($index)"> <i class="icon-minus"></i></a>
-          <a href ng-click="addKeyVals()"> <i class="icon-plus"></i></a>
-
+      <input class="form-control" name="gatewayName" ng-model="gatewayName" placeholder="Gateway Name (required)" ng-value="gatewayName" required id="gatewayName">
+      <br />
+      <div ng-repeat="key in keys" class="form-inline">
+        <div class="form-group">
+          <input class="form-control" ng-model="key.key" placeholder="Key">
         </div>
-
-        <br />
-        <button class="btn" ng-click="updateGateway()">Submit</button>  
-        <br /><br />            
-      </form>
+        <div class="form-group">
+          <input class="form-control" ng-model="key.value" placeholder="Value">
+        </div>
+        <a href ng-click="removeKeyVals($index)"> <i class="icon-minus"></i></a>
+        <a href ng-click="addKeyVals()"> <i class="icon-plus"></i></a>
+      </div>
+      <br />
+      <button class="btn" ng-click="updateGateway()">Submit</button>  
+      <br /><br />            
     </div>
 
     <div ng-hide="gateways.length">No gateways found</div>
@@ -60,44 +55,45 @@
           </div>
         </h3>
       </div>
+
       <div class="panel-body">
-        <div class="table-responsive">
-          <table class="table table-striped table-hover">
-            <tr>
-              <th>Name</th>
-              <th>Version</th>
-            </tr>
 
-            <tr ng-repeat="plugin in gateway.plugins">
-            <!-- <tr ng-repeat="plugin in plugins"> -->
-              
-              <td>
-                {{plugin.name}}
-              </td>
-              <td>{{plugin.version}}</td>
+        <tabset vertical="false" type="navType">
 
-            </tr>
-          </table>
-        </div>
+          <tab heading="Subdevices" style="cursor:pointer;">
+            <div class="table-responsive">
+              <table class="table table-striped table-hover">
+                <tr>
+                  <th width="50%">Name</th>
+                  <th width="50%">Plugin</th>
+                </tr>
+                <tr ng-repeat="subdevice in gateway.subdevices.value">
+                  <td>{{subdevice.name}}</td>
+                  <td>{{subdevice.type}}</td>
+                </tr>
+              </table>
+            </div>
+          </tab>
 
-        <div class="table-responsive">
-          <table class="table table-striped table-hover">
-            <tr>
-              <th>Name</th>
-              <th>Type</th>
-            </tr>
+          <tab heading="Plugins" style="cursor:pointer;">
+            <div class="table-responsive">
+              <table class="table table-striped table-hover">
+                <tr>
+                  <th width="50%">Name</th>
+                  <th width="50%">Version</th>
+                </tr>
+                <tr ng-repeat="plugin in gateway.plugins">                  
+                  <td>{{plugin.name}}</td>
+                  <td>{{plugin.version}}</td>
 
-            <tr ng-repeat="subdevice in gateway.subdevices.value">
-            <!-- <tr ng-repeat="subdevice in subdevices"> -->
-              
-              <td>
-                {{subdevice.name}}
-              </td>
-              <td>{{subdevice.type}}</td>
+                </tr>
+              </table>
+            </div>
+          </tab>
 
-            </tr>
-          </table>
-        </div>
+        </tabset>
+
+
 
 
 
