WIP - added posts for community tab Aggressively cleaned up routes

--- a/public/pages/community.html
+++ b/public/pages/community.html
@@ -1,15 +1,15 @@
 <section id='content'>
   <div class='container'>
-    <br /><br />    
-    <iframe  width="100%" height="1000" src="http://octoblu.vbulletin.net/" id="communityFrame"></iframe>
+    <div class='row' id='content-wrapper'>
+      <div class='col-xs-12'>
+        
+        <div class='page-header page-header-with-buttons'>
+          <h1 class='pull-left'>
+            <i class='icon-group'></i>
+            <span>Community</span>              
+          </h1>
+        </div>
+      </div>
+    </div>
   </div>
 </section>
-<script>
-$('#communityFrame').attr('height',$("body").height()-50)
-window.onresize = function(event) {
-  $('#communityFrame').attr('height',$("body").height()-50);
-}
-</script>
-
-
-
