--- a/public/index.html
+++ b/public/index.html
@@ -227,6 +227,7 @@
 	<script src="/angular/app.js"></script>	
   <script src="/angular/services.js"></script>  
   <script src="/angular/controllers.js"></script>
+  <script src="/angular/controllers/community.js"></script>
   <script src="/angular/directives.js"></script>
 
   <script src="/assets/javascripts/athenaSlide.js"></script>
