added gateway subdevice modal

--- a/public/index.html
+++ b/public/index.html
@@ -232,7 +232,7 @@
 
   <script src="/assets/javascripts/athenaSlide.js"></script>
   <script src="/assets/javascripts/demeterScroll.js"></script>
-
+  <script src="/assets/javascripts/underscore.js"></script>
   <script type="text/javascript" src="/assets/javascripts/canvasjs.min.js"></script>
 <!--
   <script>
