WIP - Pushing Community Forum for review Added posts view Added posts skin Added post slug Added post timestamps Working on post view

--- a/public/index.html
+++ b/public/index.html
@@ -228,6 +228,7 @@
   <script src="/angular/services.js"></script>  
   <script src="/angular/controllers.js"></script>
   <script src="/angular/controllers/community.js"></script>
+  <script src="/angular/controllers/community-post.js"></script>
   <script src="/angular/directives.js"></script>
 
   <script src="/assets/javascripts/athenaSlide.js"></script>
