--- a/public/pages/gateways.html
+++ b/public/pages/gateways.html
@@ -62,7 +62,7 @@
 
           <tab heading="Subdevices" style="cursor:pointer;">
             <!-- <button class="btn btn-success pull-right" ng-click="addSubdevice($index)">Add</button> -->
-            <button class="btn btn-success pull-right" ng-click="open(gateway)">Add</button>
+            <button class="btn btn-success pull-right" ng-click="openNewSubdevice(gateway)">Add</button>
             <div class="table-responsive">
               <table class="table table-striped table-hover">
                 <tr>
@@ -137,7 +137,7 @@
       </div>
       <div class="modal-footer">
           <button class="btn btn-primary" ng-click="ok(subDeviceName, plugin, deviceProperties)">OK</button>
-          <button class="btn btn-warning" ng-click="cancel()">Cancel</button>
+          <button class="btn" ng-click="cancel()">Cancel</button>
       </div>
   </script>
 </div>
