code for api editor; angularjs not behaving at the moment :(

--- a/public/pages/apis.html
+++ b/public/pages/apis.html
@@ -75,7 +75,7 @@
 		</div>
 		
 		<div>
-			<h3><i class='icon-edit'></i> Custom <button class="btn btn-primary" ng-click="editor()">Add</button></h3>
+			<h3><i class='icon-edit'></i> Custom <button class="btn btn-primary" ng-click="openNewApi()">Add</button></h3>
 	  
 		  	<ul class="channellist">
  
