--- a/public/pages/api_editor.html
+++ b/public/pages/api_editor.html
@@ -59,76 +59,61 @@
     <div xclass="text-center">
 
       <div class="pull-left">
-        <h2>{{channel.name}}</h2>
+        <h3>{{channel.name}}</h3>
+        <div>
+          <!-- <button class="btn btn-primary" ng-click="isNew=1">Test</button> -->
+          <button class="btn btn-primary" ng-show="!isEdit && !isNew" ng-click="setEditMode()">Edit</button>
+          <button class="btn btn-success" ng-show="isEdit || isNew" ng-click="save()">Save</button>
+          <button class="btn btn-danger" ng-show="isEdit && !isNew" ng-click="cancelEdit()">Cancel</button>
+        </div>
+        <br/>
+        <!-- <div>
+        t={{isNew}}
+        </div> -->
 
         <div class="field">
           <label for="resource_resourcename">Name</label>
-          <input class="input-xxlarge" id="resource_resourcename" name="resource[resourcename]" size="30" type="text" value="search" />
+          <input class="input-xxlarge" size="30" type="text" placeholder="API Name" ng-model="channel.name" />
         </div>
 
         <div class="field">
           <label for="resource_resourcename">Base URL</label>
-          <input class="input-xxlarge" id="resource_resourcename" name="resource[resourcename]" size="30" type="text" value="search" />
+          <input class="input-xxlarge" size="30" type="text" placeholder="API Base URL" ng-model="channel.application.base" />
         </div>
 
         <div class="field">
           <label for="resource_resourcename">Doc URL</label>
-          <input class="input-xxlarge" id="resource_resourcename" name="resource[resourcename]" size="30" type="text" value="search" />
+          <input class="input-xxlarge" size="30" type="text" placeholder="API Doc URL" ng-model="channel.application.doc" />
         </div>
 
         <div class="field">
           <label for="resource_resourcename">Image URL</label>
-          <input class="input-xxlarge" id="resource_resourcename" name="resource[resourcename]" size="30" type="text" value="search" />
+          <input class="input-xxlarge" size="30" type="text" placeholder="API Image URL" ng-model="channel.logo" />
         </div>
 
         <div class="field">
-          <label for="resource_resourcename">Description</label>
-          <input class="input-xxlarge" id="resource_resourcename" name="resource[resourcename]" size="30" type="text" value="search" />
-        </div>
-
-        <div class="field">
-          <label for="resource_resourcename">Category</label>
-          <select>
-            <option value="xxxx" >xxxx</option>
-          </select>
+          <label for="resource_resourcename" style="valign:top">Description</label>
+          <textarea class="input-xxlarge" cols="60" rows="10" type="text" placeholder="API Description" ng-model="channel.description" ></textarea>
         </div>
 
         <div class="field">
           <label for="resource_resourcename">Private API</label>
-          <input class="input-xxlarge" id="resource_resourcename" name="resource[resourcename]" size="30" type="text" value="search" />
+          <input class="input-xxlarge" size="30" type="checkbox" />
         </div>
 
         <div class="field">
           <label for="resource_resourcename">Auth Type</label>
-          <select>
-            <option value="xxxx">none</option>
-            <option value="xxxx">basic</option>
-            <option value="xxxx">oauth</option>
+          <select ng-model="channel.auth_strategy" ng-options="a for a in authtypes">
           </select>
         </div>
 
-      </div>
-
-      <div class="pull-right" style="float:right; posiion:relative">
-
-        <br/>
-        <div class="clearfix">
-          <button class="btn btn-success" ng-click="editor()">Open Editor</button>
+        <div>
+        &nbsp;
         </div>
-        
+
       </div>
 
     </div>
     </div>    
 
 </section>
-
-<script type="text/ng-template" id="myModalContent.html">
-    <div class="modal-body">
-        <h3>Are you sure you want to delete the settings for this api?</h3>
-    </div>
-    <div class="modal-footer">
-        <button class="btn btn-primary" ng-click="ok()">OK</button>
-        <button class="btn btn-warning" ng-click="cancel()">Cancel</button>
-    </div>
-</script>
