--- a/public/pages/gateways.html
+++ b/public/pages/gateways.html
@@ -83,7 +83,7 @@
           </tab>
 
           <tab heading="Plugins" style="cursor:pointer;">
-            <button class="btn btn-success pull-right" ng-click="addPlugin($index)">Add</button>
+            <button class="btn btn-success pull-right" ng-click="openNewPlugin(gateway)">Add</button>
             <div class="table-responsive">
               <table class="table table-striped table-hover">
                 <tr>
@@ -112,6 +112,7 @@
   </div>
 </div>
 
+<!-- Subdevice Modal -->
 <div>
   <script type="text/ng-template" id="subDeviceModal.html">
       <div class="modal-header">
@@ -141,3 +142,26 @@
       </div>
   </script>
 </div>
+
+<!-- Plugin Modal -->
+<div>
+  <script type="text/ng-template" id="pluginModal.html">
+      <div class="modal-header">
+          <h3>Add Plugin to Gateway: {{selectedGateway.name}}</h3>
+      </div>
+      <div class="modal-body">
+
+        <div class="form-group">
+          <label for="plugin" class="col-sm-2 control-label">Plugins</label>
+          <div class="col-sm-10">
+            <select ng-model="plugin" ng-options="plugin.name for plugin in plugins" class="form-control" id="plugin" ng-change="getSchema(plugin)"></select>            
+          </div>
+        </div>
+      </div>
+      <div class="modal-footer">
+          <button class="btn btn-primary" ng-click="ok(plugin)">OK</button>
+          <button class="btn" ng-click="cancel()">Cancel</button>
+      </div>
+  </script>
+</div>
+
